--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -13,6 +13,8 @@
     @import "sections/nav";
     
     @import "sections/jobs";
+    
+    @import "sections/add";
 
     @import "sections/footer";
 
