--- a/public/scss/sections/_jobs.scss
+++ b/public/scss/sections/_jobs.scss
@@ -18,7 +18,8 @@
         background-color: white;
         border-radius: 20px;
         padding:20px;
-        color: $fourth-color;
+        color: #142d4c;
+        margin-bottom: 20px;
         li {
             margin-bottom: 5px;;
             &.date {
