--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,6 +1,6 @@
 <nav>
   <div class="site-title">
-    <h1>Jobs KDWP</h1>
+    <h1><a href="/">Jobs KDWP</a></h1>
     <p>A KDWP Job Application Tracker</p>
   </div>
   <ul>
