--- a/public/scss/sections/_jobs.scss
+++ b/public/scss/sections/_jobs.scss
@@ -10,80 +10,102 @@
         font-size: 30px;
         color: $second-color;
         filter: brightness(150%);
-        padding-bottom: 5px;;
+        padding-bottom: 5px;
     
     }
-
-    >ul {
+    .job-row {
+        display: flex;
         background-color: white;
         border-radius: 20px;
         padding:20px;
         color: #142d4c;
         margin-bottom: 20px;
-        li {
-            margin-bottom: 5px;;
-            &.date {
-                font-size: 16px;
-                font-weight: 400;
-            }
-            &.company-name {
-                font-size:20px;
-                font-weight: 700;
-                span {
+
+        >ul {
+            flex:1;
+            li {
+                margin-bottom: 5px;
+                
+                &.date {
                     font-size: 16px;
                     font-weight: 400;
                 }
-            }
-            &.job-title {
-                font-size:16px;
-                font-weight: 400;
-            }
-            &.job-description {
-                font-size:16px;
-                font-weight: 400;
-                margin-bottom: 10px;
-
-                a {
-                    color: black;
-                    text-decoration: none;
-
-                }
-            }
-            &.job-requirements {
-
-                ul {
-                    display: inline-flex;
-                    border-radius: 5px;;
-                    column-gap: 5px;
-                    color: white;
-                    background-color: $second-color;
-        
-                    padding:2px 10px;
-                    li {
-                        font-size:14px;
+                
+                &.company-name {
+                    font-size:20px;
+                    font-weight: 700;
+                    span {
+                        font-size: 16px;
                         font-weight: 400;
-                        display: block;
-                        line-height: normal;
+                    }
+                }
+                
+                &.job-title {
+                    font-size:16px;
+                    font-weight: 400;
+                }
+                
+                &.job-description {
+                    font-size:16px;
+                    font-weight: 400;
+
+                    a {
+                        color: black;
+                        text-decoration: none;
+                    }
+                }
+                
+                &.job-notes {
+                    font-size:16px;
+                    font-weight: 400;
+                    margin: 10px 0;
+                }
+                
+                &.job-requirements {
+                    ul {
+                        display: inline-flex;
+                        border-radius: 5px;;
+                        column-gap: 5px;
+                        color: white;
+                        background-color: $second-color;
+                        padding:2px 10px;
+                        
+                        li {
+                            font-size:14px;
+                            font-weight: 400;
+                            display: block;
+                            line-height: normal;
+                            margin-bottom: 2px;
+                        }
+                    }
+                }
+                
+                &.job-status {
+                    margin-bottom: 0;
+
+                    ul {
+                        display: inline-flex;
+                        border-radius: 5px;;
+                        column-gap: 5px;
+                        color: white;
+                        background-color: $second-color;
+                        padding:2px 10px;
+                        li {
+                            font-size:14px;
+                            font-weight: 400;
+                            display: block;
+                            line-height: normal;
+                            margin-bottom: 2px;
+                        }
                     }
                 }
             }
-            &.job-status {
-                margin-bottom: 0;
-
-                ul {
-                    display: inline-flex;
-                    border-radius: 5px;;
-                    column-gap: 5px;
-                    color: white;
-                    background-color: $second-color;
-                    padding:2px 10px;
-                    li {
-                        font-size:14px;
-                        font-weight: 400;
-                        display: block;
-                        line-height: normal;
-                    }
-                }
+        }
+        .edit {
+            width: 100px;
+            a {
+                color: $fourth-color;
+                text-decoration: none;
             }
         }
     }
