--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -4,7 +4,9 @@
     <p>A KDWP Job Application Tracker</p>
   </div>
   <ul>
-    <li><a href="/">All Jobs</a></li>
+    <li class="search">Search <input type="text" id="search-field"></li>
+    <li><a href="/">Todays Jobs</a></li>
     <li><a href="/add">Add a Job</a></li>
+    <li><a href="/list">Job List</a></li>
   </ul>
 </nav>
