--- a/public/scss/sections/_nav.scss
+++ b/public/scss/sections/_nav.scss
@@ -35,12 +35,22 @@ nav {
         border-radius: 20px;
         padding:10px;
         column-gap: 20px;
+        color: #9fd3c7;
 
         a {
             text-decoration: none;
-            color: $second-color;
-            filter: brightness(60%);
-
+            color: #9fd3c7;
+        }
+        
+        li.search {
+            color: #9fd3c7;
+            input {
+                border:1px lightgrey solid;
+                color: lightgrey;
+                &:focus {
+                    outline: none;
+                }
+            }
         }
 
 
