--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -14,6 +14,8 @@
     
     @import "sections/jobs";
     
+    @import "sections/list";
+    
     @import "sections/add";
 
     @import "sections/footer";
