--- a/public/style.css
+++ b/public/style.css
@@ -90,11 +90,21 @@ table {
   padding: 10px;
   -moz-column-gap: 20px;
        column-gap: 20px;
+  color: #9fd3c7;
 }
 .container nav ul a {
   text-decoration: none;
   color: #9fd3c7;
-  filter: brightness(60%);
+}
+.container nav ul li.search {
+  color: #9fd3c7;
+}
+.container nav ul li.search input {
+  border: 1px lightgrey solid;
+  color: lightgrey;
+}
+.container nav ul li.search input:focus {
+  outline: none;
 }
 .container .jobs {
   margin: 20px 0;
@@ -109,42 +119,50 @@ table {
   filter: brightness(150%);
   padding-bottom: 5px;
 }
-.container .jobs > ul {
+.container .jobs .job-row {
+  display: flex;
   background-color: white;
   border-radius: 20px;
   padding: 20px;
   color: #142d4c;
   margin-bottom: 20px;
 }
-.container .jobs > ul li {
+.container .jobs .job-row > ul {
+  flex: 1;
+}
+.container .jobs .job-row > ul li {
   margin-bottom: 5px;
 }
-.container .jobs > ul li.date {
+.container .jobs .job-row > ul li.date {
   font-size: 16px;
   font-weight: 400;
 }
-.container .jobs > ul li.company-name {
+.container .jobs .job-row > ul li.company-name {
   font-size: 20px;
   font-weight: 700;
 }
-.container .jobs > ul li.company-name span {
+.container .jobs .job-row > ul li.company-name span {
   font-size: 16px;
   font-weight: 400;
 }
-.container .jobs > ul li.job-title {
+.container .jobs .job-row > ul li.job-title {
   font-size: 16px;
   font-weight: 400;
 }
-.container .jobs > ul li.job-description {
+.container .jobs .job-row > ul li.job-description {
   font-size: 16px;
   font-weight: 400;
-  margin-bottom: 10px;
 }
-.container .jobs > ul li.job-description a {
+.container .jobs .job-row > ul li.job-description a {
   color: black;
   text-decoration: none;
 }
-.container .jobs > ul li.job-requirements ul {
+.container .jobs .job-row > ul li.job-notes {
+  font-size: 16px;
+  font-weight: 400;
+  margin: 10px 0;
+}
+.container .jobs .job-row > ul li.job-requirements ul {
   display: inline-flex;
   border-radius: 5px;
   -moz-column-gap: 5px;
@@ -153,16 +171,17 @@ table {
   background-color: #9fd3c7;
   padding: 2px 10px;
 }
-.container .jobs > ul li.job-requirements ul li {
+.container .jobs .job-row > ul li.job-requirements ul li {
   font-size: 14px;
   font-weight: 400;
   display: block;
   line-height: normal;
+  margin-bottom: 2px;
 }
-.container .jobs > ul li.job-status {
+.container .jobs .job-row > ul li.job-status {
   margin-bottom: 0;
 }
-.container .jobs > ul li.job-status ul {
+.container .jobs .job-row > ul li.job-status ul {
   display: inline-flex;
   border-radius: 5px;
   -moz-column-gap: 5px;
@@ -171,11 +190,73 @@ table {
   background-color: #9fd3c7;
   padding: 2px 10px;
 }
-.container .jobs > ul li.job-status ul li {
+.container .jobs .job-row > ul li.job-status ul li {
   font-size: 14px;
   font-weight: 400;
   display: block;
   line-height: normal;
+  margin-bottom: 2px;
+}
+.container .jobs .job-row .edit {
+  width: 100px;
+}
+.container .jobs .job-row .edit a {
+  color: #142d4c;
+  text-decoration: none;
+}
+.container .jobs-list {
+  margin: 20px 0;
+  border-radius: 20px;
+  padding: 20px;
+  background-color: #9fd3c7;
+  color: white;
+}
+.container .jobs-list .job-list-title {
+  display: flex;
+  justify-content: space-between;
+  padding-bottom: 20px;
+}
+.container .jobs-list .job-list-title h2 {
+  font-size: 30px;
+  color: #9fd3c7;
+  filter: brightness(150%);
+  padding-bottom: 5px;
+}
+.container .jobs-list .job-list-title select {
+  border-radius: 5px;
+  border: 1px solid #cccccc;
+  padding: 5px 5px;
+  color: #142d4c;
+}
+.container .jobs-list .jobs-content {
+  background-color: white;
+  border-radius: 20px;
+  padding: 20px;
+}
+.container .jobs-list .jobs-content .job-table tr th {
+  text-align: left;
+  font-weight: 700;
+  color: #142d4c;
+  padding-bottom: 10px;
+}
+.container .jobs-list .jobs-content .job-table tr th a {
+  color: #142d4c;
+  text-decoration: none;
+}
+.container .jobs-list .jobs-content .job-table tr td {
+  margin-bottom: 5px;
+  font-size: 16px;
+  font-weight: 400;
+  padding-right: 20px;
+  padding-bottom: 5px;
+  color: #142d4c;
+}
+.container .jobs-list .jobs-content .job-table tr td a {
+  color: #142d4c;
+  text-decoration: none;
+}
+.container .jobs-list .jobs-content .job-table tr td a:hover {
+  text-decoration: underline;
 }
 .container .add {
   border-radius: 20px;
@@ -188,20 +269,45 @@ table {
   filter: brightness(150%);
   padding-bottom: 5px;
 }
-.container .add form > ul {
+.container .add form .submit {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding-right: 0;
+  padding-top: 20px;
+}
+.container .add form .submit input[type=submit] {
+  border-radius: 5px;
+  border: 0 solid #cccccc;
+  padding: 10px 10px;
+  background-color: #385170;
+  color: white;
+  font-size: 20px;
+}
+.container .add form .content {
+  display: flex;
+  -moz-column-gap: 20px;
+       column-gap: 20px;
+}
+.container .add form .content > ul {
   background-color: white;
   border-radius: 20px;
   padding: 20px;
   display: flex;
   flex-direction: column;
+  width: 600px;
 }
-.container .add form > ul > li {
+.container .add form .content > ul > li {
   display: flex;
   padding-bottom: 5px;
   gap: 5px;
   align-items: center;
 }
-.container .add form > ul > li > label {
+.container .add form .content > ul > li.job-requirements {
+  align-items: flex-start;
+  padding-bottom: 10px;
+}
+.container .add form .content > ul > li > label {
   font-size: 18px;
   display: flex;
   align-items: center;
@@ -209,13 +315,23 @@ table {
   color: #142d4c;
   width: 120px;
 }
-.container .add form > ul > li > input {
-  flex: 0.5;
+.container .add form .content > ul > li > input {
+  flex: 1;
   border-radius: 5px;
   border: 1px solid #cccccc;
   padding: 5px 5px;
 }
-.container .add form > ul > li ul.checks li input[type=checkbox] {
+.container .add form .content > ul > li ul.checks {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  row-gap: 10px;
+  -moz-column-gap: 10px;
+       column-gap: 10px;
+}
+.container .add form .content > ul > li ul.checks li {
+  white-space: nowrap;
+}
+.container .add form .content > ul > li ul.checks li input[type=checkbox] {
   width: 1.3em;
   height: 1.3em;
   background-color: white;
@@ -228,13 +344,20 @@ table {
   outline: none;
   cursor: pointer;
 }
-.container .add form > ul > li ul.checks li input[type=checkbox]:checked {
+.container .add form .content > ul > li ul.checks li input[type=checkbox]:checked {
   background-color: gray;
 }
-.container .add form > ul > li ul.radios {
-  background-color: #fff;
+.container .add form .content > ul > li ul.radios {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  row-gap: 10px;
+  -moz-column-gap: 10px;
+       column-gap: 10px;
 }
-.container .add form > ul > li ul.radios li input[type=radio] {
+.container .add form .content > ul > li ul.radios li {
+  white-space: nowrap;
+}
+.container .add form .content > ul > li ul.radios li input[type=radio] {
   width: 1.3em;
   height: 1.3em;
   background-color: white;
@@ -247,8 +370,44 @@ table {
   outline: none;
   cursor: pointer;
 }
-.container .add form > ul > li ul.radios li input[type=radio]:checked {
+.container .add form .content > ul > li ul.radios li input[type=radio]:checked {
   background-color: gray;
+}
+.container .add form .content .notes {
+  background-color: white;
+  border-radius: 20px;
+  padding: 20px;
+  flex: 1;
+}
+.container .add form .content .notes .notes-area {
+  padding-bottom: 10px;
+}
+.container .add form .content .notes .notes-area textarea {
+  width: 100%;
+  background-color: white;
+  border-radius: 20px;
+  border: 1px solid #ddd;
+  padding: 20px;
+}
+.container .add form .content .notes .notes-area textarea::-moz-placeholder {
+  color: #9fd3c7;
+}
+.container .add form .content .notes .notes-area textarea::placeholder {
+  color: #9fd3c7;
+}
+.container .add form .content .notes .recruiter-area {
+  display: grid;
+  grid-template-columns: auto 1fr;
+  grid-gap: 5px;
+  align-items: center;
+}
+.container .add form .content .notes .recruiter-area label {
+  text-align: right;
+}
+.container .add form .content .notes .recruiter-area input {
+  border-radius: 5px;
+  border: 1px solid #cccccc;
+  padding: 5px 5px;
 }
 .container footer {
   display: flex;
