--- a/views/add.ejs
+++ b/views/add.ejs
@@ -1,47 +1,63 @@
 <%- include("./partials/head.ejs") %>
-    <div class="add">
+<% const date = new Date();let currentDate = `${date.getMonth()+1}/${date.getDate()}/${date.getFullYear()}`;%>
+<style>
 
-        <form action="/doadd" method="post">
-            <h2>Add Jobs</h2>
+</style>
+<div class="add">
+    <form action="/doadd" method="post">
+        <h2>Add Jobs</h2>
+        <div class="content" style="display: flex;">
             <ul>
-                <li class="date">
-                    <label>Date: </label><input type="text" name="date" value="2/3/2023"/>
+                <!-- <li class="date">
+                    <label>Date: </label><input type="text" name="date" value="<%= currentDate %>"/>
+                </li> -->
+                <li class="job-title">
+                    <label>Job Title: </label><input type="text" name="jobTitle" value="" />
                 </li>
                 <li class="company-name">
-                    <label>Company: </label><input type="text" name="companyName" value="Top Widgets Inc"/>
-                </li>
-                <li class="job-title">
-                    <label>Job Title: </label><input type="text" name="jobTitle" value="Web Developer" />
+                    <label>Company: </label><input type="text" name="companyName" value=""/>
                 </li>
                 <li class="job-link">
-                    <label>Job  Link: </label><input type="text" name="jobLink" value="https://topwidg.com" />
+                    <label>Job  Link: </label><input type="text" name="jobLink" value="" />
                 </li>
                 <li class="job-requirements">
                     <label>Job Reqs: </label>
                     <ul class="checks">
-                        <li><% let reqs = ['php', 'mysql', 'vuejs', 'nodejs', 'laravel']; %>
-                            <% reqs.forEach ((req, i)=>{ %>
-                                <input type="checkbox" id="check" name="reqs" value="<%= req %>"> <%= req %>
-                                <% if (i < reqs.length-1) { %> | <% } %>
-                            <% }) %>
-                        </li>
+                        <% reqs.forEach ((req, i)=>{ %>
+                            <li><input type="checkbox" id="check" name="reqs[]" value="<%= req %>"> <%= req %></li>
+                        <% }) %>
                     </ul>
                 </li>
                 <li class="job-activity">
                     <label>Job Activity: </label>
                     <ul class="radios">
-                        <li><% let acts = ['applied', 'rejected', 'interview', 'archived']; %>
-                            <% acts.forEach ((act, i)=>{ %>
-                                <input type="radio" id="radio" name="act" value="<%= act %>"> <%= act %>
-                                <% if (i < acts.length-1) { %> | <% } %>
-                            <% }) %>
-                        </li>
+                        <% acts.forEach ((act, i)=>{ %>
+                            <li><input type="radio" id="radio" name="acts" value="<%= act %>" <% if (act=='applied') {%> checked <% } %>> <%= act %></li>
+                        <% }) %>
                     </ul>
                 </li>
-                <li class="job-submit">
-                    <label></label><input type="submit" name="submit" value="submit">
+                <li class="job-locs">
+                    <label>Job Locations: </label>
+                    <ul class="radios">
+                        <% locs.forEach ((loc, i)=>{ %>
+                            <li><input type="radio" id="radio" name="locs" value="<%= loc %>"> <%= loc %></li>
+                        <% }) %>
+                    </ul>
                 </li>
             </ul>
-        </form>
-    </div>
+            <div class="notes">
+                <div class="notes-area">
+                    <textarea name="notes" id="notes" cols="30" rows="10" placeholder="Notes"></textarea>
+                </div>
+                <div class="recruiter-area">
+                    <label>Recruiter Name: </label><input type="text" name="recruiterName">
+                    <label>Recruiter Contact: </label><input type="text" name="recruiterContact">
+                </div>
+            </div>
+        </div>
+        <div class="submit">
+            <input type="submit" name="submit" value="Submit">
+        </div>
+    </form>
+</div>
 <%- include("./partials/footer.ejs") %>
