--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -1,12 +1,14 @@
-<%- include("./partials/head.ejs") %>
+<%- include("./partials/head.ejs");%>
 <div class="add">
+    <div class="job-list-title">
+        <h2><%= title %></h2>
+    </div>
     <form action="/doedit" method="post">
         <input type="hidden" name="_id" value="<%= job._id %>">
-        <h2><%= title %></h2>
         <div class="content" style="display: flex;">
             <ul>
                 <li class="date">
-                    <label>Date: </label><input type="text" name="date" value="<%= job.date %>"/>
+                    <label>Date: </label><%= moment(new Date(job.date)).format('MM/D/YYYY'); %>
                 </li>
                 <li class="job-title">
                     <label>Job Title: </label><input type="text" name="jobTitle" value="<%= job.jobTitle %>" />
