--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,16 +1,21 @@
-<%- include("./partials/head.ejs") %>
+<%- include("./partials/head.ejs"); %>
 <div class="jobs">
-    <h2>Todays Jobs (<%= jobList?.length %>)</h2>
+    <div class="job-list-title">
+        <h2>Todays Jobs (<%= jobList?.length %>)</h2>
+        <select class="form-select" id="months">
+            <option selected>Open this select menu</option>
+            <option value="10">October</option>
+            <option value="11">November</option>
+        </select>
+    </div>
     <% if (jobList?.length > 0) { %> 
-        <% jobList.forEach(job => { 
-            const [year, month, day] = JSON.stringify(job.date).replace(/^"(.*)"$/, '$1').slice(0, 10).split('-');
-            let date = `${month}/${day}/${year}`; %>
+        <% jobList.forEach(job => { %>
             <div class="job-row">
                 <ul>
-                    <li class="date"><h3><%= date %></h3></li>
+                    <li class="date"><h3><%= moment(new Date(job.date)).format('MM/D/YYYY'); %></h3></li>
                     <li class="company-name"><%= job.jobTitle %> <span>- <%= job.companyName %></span></li>
                     <li class="job-description"><a href="<%= job.jobLink %>" target="_blank">Link to JD</a></li>
-                    <li class="job-notes"><%= job.notes %></li>
+                    <li class="job-notes"><%- job.notes.replace(/(?:\r\n|\r|\n)/g, "<br>");  %></li>
                     <% if(typeof job.reqs !== 'undefined'){ %>
                         <li class="job-requirements">
                             <ul>
@@ -28,10 +33,6 @@
                         </li>
                     <% } %>
                 </ul>
-                <div class="edit">
-                    <a href="/edit?id=<%= job._id %>">edit</a> | 
-                    <a href="/delete?id=<%= job._id %>" onclick="return confirm('Are you sure?')">delete</a>
-                </div>
             </div>
         <% }) %> 
     <% } else { %>
