--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -4,8 +4,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/style.css">
   <title>Job Hunt KDWP | <%= title %></title>
+  <script src="https://cdn.jsdelivr.net/npm/moment@2.29.4/moment.min.js"></script>
   <script src="http://localhost:3000/lib/searchBar.js" type="module"></script>
-  <!-- <script src="http://localhost:3000/lib/utilities.js" type="module"></script> -->
+  <script src="http://localhost:3000/lib/utilities.js" type="module"></script>
 
 </head>
 <body>
