--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -8,5 +8,6 @@
     <li><a href="/">Todays Jobs</a></li>
     <li><a href="/add">Add a Job</a></li>
     <li><a href="/list">Job List</a></li>
+    <li><a href="/logout">Logout</a></li>
   </ul>
 </nav>
