--- a/public/scss/sections/_list.scss
+++ b/public/scss/sections/_list.scss
@@ -33,6 +33,7 @@
         padding:20px;
 
         .job-table {
+            width: 100%;;
 
             tr {
                 th {
@@ -50,7 +51,7 @@
                     margin-bottom: 5px;
                     font-size: 16px;
                     font-weight: 400;
-                    padding-right:20px;
+                    padding-right:5px;
                     padding-bottom: 5px;
                     color: #142d4c;
                     a {
@@ -66,6 +67,7 @@
                     &.company-name {}
                     
                     &.job-title {}
+                    &.edit {white-space: nowrap; padding-left: 20px;;}
                     
                 }
             }
