--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,7 +1,9 @@
 <%- include("./partials/head.ejs") %>
 <div class="add">
-    <form action="/login" method="post">
+    <div class="job-list-title">
         <h2><%= title %></h2>
+    </div>
+    <form action="/login" method="post">
         <div class="content" style="display: flex;">
             <ul>
                 <li class="job-title">
