--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,10 +7,10 @@
         <div class="content" style="display: flex;">
             <ul>
                 <li class="job-title">
-                    <label>Username: </label><input type="text" name="username" value="<%= username %>" />
+                    <label>Username: </label><input type="text" name="username" value="" />
                 </li>
                 <li class="company-name">
-                    <label>Password: </label><input type="text" name="password" value="<%= password %>"/>
+                    <label>Password: </label><input type="text" name="password" value=""/>
                 </li>
             </ul>
         </div>
