--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -9,6 +9,26 @@
     background-color: $first-color;
     border-radius: 20px;
     padding:20px;
+    
+    .job-list-title {
+        display: flex;
+        justify-content: space-between;
+        padding-bottom: 20px;
+        h2 {
+            font-size: 30px;
+            color: $second-color;
+            filter: brightness(150%);
+            padding-bottom: 5px;
+        }
+        
+        select {
+            border-radius: 5px;
+            border: 1px solid #cccccc;
+            padding: 5px 5px;
+            color: #142d4c;
+        }
+
+    }
 
     @import "sections/nav";
     
