--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -6,7 +6,7 @@
   <title>Job Hunt KDWP | <%= title %></title>
   <script src="https://cdn.jsdelivr.net/npm/moment@2.29.4/moment.min.js"></script>
   <script src="http://localhost:3000/lib/searchBar.js" type="module"></script>
-  <script src="http://localhost:3000/lib/utilities.js" type="module"></script>
+  <!-- <script src="http://localhost:3000/lib/utilities.js" type="module"></script> -->
 
 </head>
 <body>
