fix utility bug and sort out titles2

--- a/views/partials/dropdown-month.ejs
+++ b/views/partials/dropdown-month.ejs
@@ -6,7 +6,7 @@
         <script>
             const months = document.querySelector('#months');
             months.addEventListener('change', async (item)=>{
-                const response = await fetch("http://localhost:3000/api/month/"+item.target.value);
+                const response = await fetch("/api/month/"+item.target.value);
                 const jobList = await response.json();
                 const resultHolder = document.querySelector('.jobs-content tbody');
                 resultHolder.innerHTML = allJobsList(jobList);
